tui/src/bottom_pane/snapshots/agere_tui__bottom_pane__approval_overlay__tests__approval_overlay_permissions_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
assertion_line: 1874
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---

  Would you like to grant these permissions?

  Reason: need workspace access

  Permission rule: network; read `/tmp/readme.txt`; write `/tmp/out.txt`

  › 1. Yes, grant these permissions for this turn (y)
    2. Yes, grant for this turn with strict auto review (r)
    3. Yes, grant these permissions for this session (a)
    4. No, continue without permissions (d)

  Press enter to confirm or esc to cancel
